--- a/src/Application/Views/Home.fxml
+++ b/src/Application/Views/Home.fxml
@@ -1222,9 +1222,80 @@
                 </Button>
             </children>
         </Pane>
+        <Pane fx:id="Pane_pers" layoutX="289.0" layoutY="-4.0" prefHeight="680.0" prefWidth="922.0" style="-fx-background-color: white;">
+            <children>
+                <ImageView fitHeight="129.0" fitWidth="143.0" layoutX="34.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../resources/images/userTest.jpg" />
+                    </image>
+                </ImageView>
+                <Label fx:id="complet_esg1" layoutX="182.0" layoutY="78.0" prefHeight="27.0" prefWidth="161.0" text="Nom Complet" textFill="#6f6f6f">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Label>
+                <DatePicker fx:id="date_naiss_admin" layoutX="214.0" layoutY="205.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" styleClass="combo-box" stylesheets="@../../resources/Styles/MaterialDesign.css" />
+                <Label layoutX="51.0" layoutY="210.0" text="Date de naissance :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Pane layoutX="473.0" layoutY="200.0" prefHeight="342.0" prefWidth="3.0" style="-fx-background-color: #24ACF2;" />
+                <Label layoutX="599.0" layoutY="263.0" text="Sexe :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Text fx:id="txt_sexe_pers" layoutX="725.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Homme">
+                    <font>
+                        <Font size="18.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="user_txt_pers" layoutX="666.0" layoutY="316.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
+                <TextField fx:id="pw_txt_pers" layoutX="666.0" layoutY="379.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
+                <Label layoutX="506.0" layoutY="326.0" text="Nom d'utilisateur  :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Label layoutX="537.0" layoutY="390.0" text="Mot de passe :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="email_pers" layoutX="214.0" layoutY="268.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
+                <TextField fx:id="tel_pers" layoutX="214.0" layoutY="328.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
+                <Label layoutX="141.0" layoutY="275.0" text="Email :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Label layoutX="107.0" layoutY="335.0" text="Téléphone :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Label layoutX="124.0" layoutY="418.0" text="Adresse :" textFill="#6f6f6f">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Button fx:id="modifier_pers" layoutX="373.0" layoutY="597.0" mnemonicParsing="false" onAction="#Modifier_Personnel" prefHeight="46.0" prefWidth="242.0" style="-fx-border-radius: 10px;" stylesheets="@../../resources/Styles/LoginStyling.css" text="Mettre à jour mes données" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                </Button>
+                <TextArea fx:id="adresse_pers" layoutX="214.0" layoutY="409.0" prefHeight="120.0" prefWidth="200.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
+                <Label layoutX="383.0" layoutY="28.0" prefHeight="37.0" prefWidth="194.0" text="Profil Admin" textFill="#6f6f6f" underline="true">
+                    <font>
+                        <Font name="Russo One" size="29.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
         <Pane fx:id="panelStatistiquesPersonnel" layoutX="289.0" layoutY="-4.0" prefHeight="680.0" prefWidth="922.0" style="-fx-background-color: WHITE;">
             <children>
-                <PieChart fx:id="pieChartPersonnel" labelsVisible="false" layoutX="491.0" layoutY="383.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="142.0" prefWidth="411.0" />
+                <PieChart fx:id="pieChartPersonnel" labelsVisible="false" layoutX="585.0" layoutY="383.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="110.0" prefWidth="257.0" />
                 <BarChart fx:id="barChartPersonnel" layoutX="26.0" layoutY="224.0" prefHeight="317.0" prefWidth="435.0">
                     <xAxis>
                         <CategoryAxis side="BOTTOM" />
@@ -1238,27 +1309,7 @@
                         <Font name="Russo One" size="29.0" />
                     </font>
                 </Label>
-                <Label layoutX="193.0" layoutY="578.0" text="étudiants ayant leurs notes :" textFill="#464646">
-                    <font>
-                        <Font name="System Italic" size="14.0" />
-                    </font>
-                </Label>
-                <Label fx:id="etumoySup" layoutX="380.0" layoutY="578.0" text="14" underline="true">
-                    <font>
-                        <Font name="System Bold Italic" size="14.0" />
-                    </font>
-                </Label>
-                <Label layoutX="157.0" layoutY="604.0" text="étudiants n'ayant pas leurs notes :" textFill="#464646">
-                    <font>
-                        <Font name="System Italic" size="14.0" />
-                    </font>
-                </Label>
-                <Label fx:id="etuNoteInf" layoutX="390.0" layoutY="603.0" text="9" underline="true">
-                    <font>
-                        <Font name="System Bold Italic" size="14.0" />
-                    </font>
-                </Label>
-                <PieChart fx:id="pieChartMoyenne" labelsVisible="false" layoutX="493.0" layoutY="237.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="142.0" prefWidth="411.0" />
+                <PieChart fx:id="pieChartMoyenne" labelsVisible="false" layoutX="585.0" layoutY="237.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="110.0" prefWidth="257.0" />
                 <Pane layoutX="71.0" layoutY="79.0" prefHeight="105.0" prefWidth="214.0" style="-fx-background-color: #F3612D; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                     <children>
                         <Label layoutX="13.0" layoutY="7.0" text="Nombre total des étudians :" textFill="WHITE">
@@ -1335,13 +1386,12 @@
                         <Font name="Arial Black" size="14.0" />
                     </font>
                 </Label>
-                <PieChart labelsVisible="false" layoutX="491.0" layoutY="529.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="142.0" prefWidth="411.0" />
-                <Label layoutX="482.0" layoutY="531.0" text="Titre rak tma" textFill="#464646" underline="true">
+                <PieChart fx:id="pieChartNote" labelsVisible="false" layoutX="585.0" layoutY="550.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="110.0" prefWidth="257.0" />
+                <Label layoutX="482.0" layoutY="531.0" text="Nombre d'étudiant ayant la moyenne" textFill="#464646" underline="true">
                     <font>
                         <Font name="Arial Black" size="14.0" />
                     </font>
                 </Label>
-                <PieChart fx:id="pieChartNote" labelsVisible="false" layoutX="449.0" layoutY="420.0" legendVisible="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="142.0" prefWidth="411.0" />
                 <Pane layoutX="494.0" layoutY="289.0" prefHeight="17.0" prefWidth="16.0" style="-fx-background-color: #EAA029; -fx-border-radius: 5px; -fx-background-radius: 5px;" />
                 <Label layoutX="515.0" layoutY="288.0" text="Négatives" textFill="#464646">
                     <font>
@@ -1367,77 +1417,18 @@
                     </font>
                 </Label>
                 <Button layoutX="105.0" layoutY="540.0" mnemonicParsing="false" onAction="#Actualisation" text="Clicki tchof si7r" />
-            </children>
-        </Pane>
-        <Pane fx:id="Pane_pers" layoutX="289.0" layoutY="-4.0" prefHeight="680.0" prefWidth="922.0" style="-fx-background-color: white;">
-            <children>
-                <ImageView fitHeight="129.0" fitWidth="143.0" layoutX="34.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../../resources/images/userTest.jpg" />
-                    </image>
-                </ImageView>
-                <Label fx:id="complet_esg1" layoutX="182.0" layoutY="78.0" prefHeight="27.0" prefWidth="161.0" text="Nom Complet" textFill="#6f6f6f">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Label>
-                <DatePicker fx:id="date_naiss_admin" layoutX="214.0" layoutY="205.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" styleClass="combo-box" stylesheets="@../../resources/Styles/MaterialDesign.css" />
-                <Label layoutX="51.0" layoutY="210.0" text="Date de naissance :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <Pane layoutX="473.0" layoutY="200.0" prefHeight="342.0" prefWidth="3.0" style="-fx-background-color: #24ACF2;" />
-                <Label layoutX="599.0" layoutY="263.0" text="Sexe :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <Text fx:id="txt_sexe_pers" layoutX="725.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Homme">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="user_txt_pers" layoutX="666.0" layoutY="316.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
-                <TextField fx:id="pw_txt_pers" layoutX="666.0" layoutY="379.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
-                <Label layoutX="506.0" layoutY="326.0" text="Nom d'utilisateur  :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <Label layoutX="537.0" layoutY="390.0" text="Mot de passe :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="email_pers" layoutX="214.0" layoutY="268.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
-                <TextField fx:id="tel_pers" layoutX="214.0" layoutY="328.0" prefHeight="35.0" prefWidth="191.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
-                <Label layoutX="141.0" layoutY="275.0" text="Email :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <Label layoutX="107.0" layoutY="335.0" text="Téléphone :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <Label layoutX="124.0" layoutY="418.0" text="Adresse :" textFill="#6f6f6f">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Label>
-                <Button fx:id="modifier_pers" layoutX="373.0" layoutY="597.0" mnemonicParsing="false" onAction="#Modifier_Personnel" prefHeight="46.0" prefWidth="242.0" style="-fx-border-radius: 10px;" stylesheets="@../../resources/Styles/LoginStyling.css" text="Mettre à jour mes données" textFill="WHITE">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
-                </Button>
-                <TextArea fx:id="adresse_pers" layoutX="214.0" layoutY="409.0" prefHeight="120.0" prefWidth="200.0" style="-fx-border-color: #24ACF2;" stylesheets="@../../resources/Styles/MaterialDesign.css" />
-                <Label layoutX="383.0" layoutY="28.0" prefHeight="37.0" prefWidth="194.0" text="Profil Admin" textFill="#6f6f6f" underline="true">
-                    <font>
-                        <Font name="Russo One" size="29.0" />
-                    </font>
-                </Label>
+            <Pane layoutX="498.0" layoutY="577.0" prefHeight="17.0" prefWidth="16.0" style="-fx-background-color: #00cc00; -fx-border-radius: 5px; -fx-background-radius: 5px;" />
+            <Label layoutX="519.0" layoutY="576.0" text="Etudiants ayant &gt; 10" textFill="#464646">
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
+            </Label>
+            <Pane layoutX="498.0" layoutY="603.0" prefHeight="17.0" prefWidth="16.0" style="-fx-background-color: #ff4d4d; -fx-border-radius: 5px; -fx-background-radius: 5px;" />
+            <Label layoutX="519.0" layoutY="602.0" text="Etudiants ayant &lt; 10" textFill="#464646">
+               <font>
+                  <Font name="System Italic" size="14.0" />
+               </font>
+            </Label>
             </children>
         </Pane>
 
